--- a/package.json
+++ b/package.json
@@ -52,5 +52,8 @@
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^5.2.1"
+  },
+  "dependencies": {
+    "@types/less": "^3.0.8"
   }
 }
